# RAG_agent

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  Instruction.md  README.md  config.yaml  example.py  pyproject.toml
.claude/: CLAUDE.md  RUN.md
Amoly_Transformer/: README.md  main.py  pyproject.toml
Amoly_Transformer/data/: instrument_runs.csv
Amoly_Transformer/docs/: RECORD_Change.md
Amoly_Transformer/src/config/: data.yaml  inference.yaml  loader.py  model.yaml  training.yaml
Amoly_Transformer/src/data/: dataset.py  generate_fake.py  loader.py
Amoly_Transformer/src/inference/: scorer.py
Amoly_Transformer/src/models/: transformer.py
Amoly_Transformer/src/training/: trainer.py
Amoly_Transformer/src/utils/: logging.py
RAG/: README.md  pyproject.toml
RAG/docs/: CONFIG_STRUCTURE.md  RECORD_Change.md
RAG/llm_configs/: README.md  data_analysis_config.yaml  rag_config.yaml  router_config.yaml
RAG/preprocess/: README.md  build_rag_index.py  inspect_chroma.py
RAG/preprocess/output/: .gitignore
RAG/preprocess/utils/: chunking.py
RAG/project_folder/2025_013_TMPIF1096_cateatfish_D210GX0001/: 2025_013_TMPIF1096_cateatfish_D210GX0001.docx
RAG/project_folder/2025_092_TMPIF446_diverthedave_D328GX0007/: 2025_092_TMPIF446_diverthedave_D328GX0007.docx
RAG/src/: llm_client.py  vector_retriever.py
RAG/src/graph/: analysis_node.py  metadata_node.py  rag_node_new.py  router.py
docs/: EMBEDDING_IMPLEMENTATION.md  PREPROCESSING_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  RAG_METHODS.md  RAG_USAGE_GUIDE.md  RECORD_Change.md
llm_configs/: metadata_config.yaml
preprocess/: README.md  build_vector_db.py  chunk_documents.py
preprocess/chunks/: chunk_stats.json  chunks.json
preprocess/scripts/: build_rag_index.py  inspect_chroma.py
preprocess/utils/: document_loader.py
src/: embeddings.py  llm_client.py  main.py  main_rag.py  retriever.py  utils.py
(+4 files in other folders)
